# openbox

./: .gitignore  README.md  local_build.sh  package-lock.json  package.json  publish_update.sh
.github/workflows/: release.yml
local-update-server/: server.cjs
local-update-server/static/: build-status.json  latest.json
openbox-log-server/: server.cjs
src/: package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: turbolaunch.json
src-tauri/github/openbox/src-tauri/capabilities/: turbolaunch.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  library.rs  main.rs  media_cache.rs  redis_cache.rs  scanner.rs  scraper.rs  settings.rs
src/routes/: +page.svelte
src/src/routes/: +page.svelte
updater/: latest.json
