[package]
name = "turbolaunch"
version = "0.1.13"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }
jwalk = "0.8"
rayon = "1"
image = { version = "0.25", features = ["webp", "png", "jpeg"] }
quick-xml = { version = "0.36", features = ["serialize"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
tauri-plugin-dialog = "2.6.0"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2.3.1"
chrono = "0.4.43"
zip-extract = "0.4.1"

[features]
default = []
